fix: small gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -335,7 +335,7 @@
   .main__section {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 11px;
     margin-top: 0;
     margin-bottom: 30px;
   }
